2005-08-17  Michael Jung  <mjung@iss.tu-darmstadt.de> 

	* lib/shell32.c (CLSID_RecycleBin, CLSID_ControlPanel,
	CLSID_MyComputer,CLSID_Internet, CLSID_NetworkPlaces,
	CLSID_MyDocuments, CLSID_FolderShortcut): Add GUIDs. 

005-08-17  Martin Fuchs <martin-fuchs@gmx.net>

	* include/shlobj.h (IContextMenu3): Define.
	* include/shlguid.h (IID_IContextMenu3): Declare.
	* lib/shell32.c (IID_IContextMenu3): Define.

2005-08-17  Martin Fuchs <martin-fuchs@gmx.net>

	* include/shlobj.h (SHFormatDrive): Declaration of function
	and associated constants.

2005-08-12  Danny Smith  <dannysmith@users.sourceforge.net>

	* include/ddk/hidsdi.h:  New file.
	* lib/ddk/hid.def: Uncomment symbols and add stdcall suffix for
	functions declared in hidsdi.h.
	Thanks to:  Alex J Lennon  <ajlennon at organixconsulting dot com>

2005-08-12  Danny Smith  <dannysmith@users.sourceforge.net>

	* lib/imm32.def (ImmDisableIME): Add stub.
	Thanks to: "kidmin"  <kidmin at users dot sourceforge dot net>

2005-08-10  Chris Sutcliffe  <ir0nh34d@users.sf.net>

	* include/w32api.h: Increment version to 3.3.
	* Makefile.in: Ditto.

2005-07-28  Earnie Boyd  <earnie@users.sf.net>

	* include/winnt.h (SUBLANG_PORTUGUESE, SUBLANG_PORTUGUESE_BRAZILIAN):
	Correct their values.
	Thanks to: Daniel K. O. <danielosmari at users dont sf dot net>

2005-07-25  Chris Sutcliffe <ir0nh34d@users.sourceforge.net>

	* include/winuser.h (HSHELL_RUDEAPPACTIVATED): Define.

2005-07-20  Danny Smith  <dannysmith@users.sourceforge.net>

	* include/wingdi.h (TT_PRIM_CSPLINE): Define.
	Thanks to: Bob Jamison <ishmal at users dot sourceforge dot net>

2005-07-20  Danny Smith  <dannysmith@users.sourceforge.net>

	* include/richedit.h (SETTEXTEX): Define structure and
	associated constants.
	(GT_SELECTION): Define GETTEXTEX flag constant. 

2005-07-19  Danny Smith  <dannysmith@users.sourceforge.net>

	* include/wingdi.h (SYSPAL_NOSTATIC256): Define.

2005-07-19  Danny Smith  <dannysmith@users.sourceforge.net>
