@@ -1,3 +1,9 @@
+2005-09-08  Dimitri Papadopoulos  <papadopo@users.sourceforge.net>
+
+	* include/reason.h  [_WIN32_WINNT >= 0x0501]
+	(SHTDN_REASON_*): New file.
+	* include/objbase.h: Avoid double header guard.
+
 2005-08-17  Michael Jung  <mjung@iss.tu-darmstadt.de> 
 
 	* lib/shell32.c (CLSID_RecycleBin, CLSID_ControlPanel,
